Add game UI and style it.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Fugaz+One&display=swap" rel="stylesheet">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
 </head>
 <body>
-    <h1>Hello from the other side!</h1>
+    <header>Tic Tac Toe</header>
+    
+        <main>
+            <div class="display">It's player X turn</div>
+
+            <div class="cellsContainer">
+                <div class="row1">
+            <div class="cell" id="0"></div>
+            <div class="cell" id="1"></div>
+            <div class="cell" id="2"></div>
+                </div>
+                <div class="row2">
+            <div class="cell" id="3"></div>
+            <div class="cell" id="4"></div>
+            <div class="cell" id="5"></div>
+                </div>
+                <div class="row3">
+            <div class="cell" id="6"></div>
+            <div class="cell" id="7"></div>
+            <div class="cell" id="8"></div>  
+                </div>
+            </div>
+            <button class="restartBtn">Restart</button>
+        </main>
+    
+    <footer> Copyright © 2026 mostafaessam007</footer>
 </body>
 </html>
