Add DOM contorller and restart button.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>Tic Tac Toe</header>
     
         <main>
-            <div class="display">It's player X turn</div>
+            <div class="display"></div>
 
             <div class="cellsContainer">
                 <div class="row1">
